--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "contact-form-app",
-    "version": "1.0.0",
-    "description": "Ein einfaches Kontaktformular, das E-Mails mit Node.js und Express versendet.",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "body-parser": "^1.19.0",
-      "express": "^4.17.1",
-      "nodemailer": "^6.6.3"
-    },
-    "engines": {
-      "node": "20.x"
-    },
-    "author": "Joel Bühler",
-    "license": "MIT"
-  }
+  "name": "contact-form-app",
+  "version": "1.0.0",
+  "description": "Ein einfaches Kontaktformular, das E-Mails mit Node.js und Azure Communication Services versendet.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "@azure/communication-email": "^1.0.0"
+  },
+  "engines": {
+    "node": "20.x"
+  },
+  "author": "Joel Bühler",
+  "license": "MIT"
+}
