--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "@azure/communication-email": "^1.0.0"
+    "@azure/communication-email": "^1.0.0",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "20.x"
